--- a/src/Widgets/home.ui
+++ b/src/Widgets/home.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>783</width>
-    <height>508</height>
+    <width>753</width>
+    <height>470</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -27,7 +27,6 @@
        <property name="frameShadow">
         <enum>QFrame::Raised</enum>
        </property>
-       <zorder></zorder>
       </widget>
      </item>
      <item>
@@ -54,7 +53,7 @@
        <item>
         <widget class="QWidget" name="widget" native="true">
          <property name="sizePolicy">
-          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+          <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
