Tidy up moneychanger.pro. Added to DEPENDPATH and INCLUDEPATH variables (but really needs better directory structure eventually).

--- a/src/Widgets/contactdetails.ui
+++ b/src/Widgets/contactdetails.ui
@@ -100,7 +100,7 @@
   <customwidget>
    <class>MTEditDetails</class>
    <extends>QWidget</extends>
-   <header>mteditdetails.h</header>
+   <header>editdetails.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
