--- a/src/Widgets/identifierwidget.ui
+++ b/src/Widgets/identifierwidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>345</width>
-    <height>44</height>
+    <height>50</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -22,7 +22,11 @@
     </widget>
    </item>
    <item>
-    <widget class="QLineEdit" name="lineEdit"/>
+    <widget class="QLineEdit" name="lineEdit">
+     <property name="placeholderText">
+      <string>Paste ID, or scan QR code</string>
+     </property>
+    </widget>
    </item>
    <item>
     <widget class="QToolButton" name="toolButton">
