--- a/src/Widgets/requestdlg.ui
+++ b/src/Widgets/requestdlg.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>456</width>
+    <width>416</width>
     <height>238</height>
    </rect>
   </property>
@@ -55,6 +55,17 @@
         </property>
        </widget>
       </item>
+      <item row="0" column="3">
+       <widget class="QToolButton" name="toolButton">
+        <property name="text">
+         <string>...</string>
+        </property>
+        <property name="icon">
+         <iconset resource="../resource.qrc">
+          <normaloff>:/icons/addressbook</normaloff>:/icons/addressbook</iconset>
+        </property>
+       </widget>
+      </item>
       <item row="1" column="0">
        <widget class="QLabel" name="label_2">
         <property name="maximumSize">
@@ -78,6 +89,17 @@
         </property>
        </widget>
       </item>
+      <item row="1" column="3">
+       <widget class="QToolButton" name="toolButtonManageAccts">
+        <property name="text">
+         <string>...</string>
+        </property>
+        <property name="icon">
+         <iconset resource="../resource.qrc">
+          <normaloff>:/icons/account</normaloff>:/icons/account</iconset>
+        </property>
+       </widget>
+      </item>
       <item row="2" column="0">
        <widget class="QLabel" name="label_4">
         <property name="maximumSize">
@@ -91,7 +113,7 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="1" colspan="2">
+      <item row="2" column="1" colspan="3">
        <widget class="QLineEdit" name="memoEdit"/>
       </item>
       <item row="3" column="0">
@@ -117,7 +139,7 @@
         </property>
        </widget>
       </item>
-      <item row="3" column="2">
+      <item row="3" column="2" colspan="2">
        <widget class="QLabel" name="label_3">
         <property name="text">
          <string>(Invoice)</string>
@@ -145,6 +167,8 @@
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="../resource.qrc"/>
+ </resources>
  <connections/>
 </ui>
