--- a/src/Widgets/senddlg.ui
+++ b/src/Widgets/senddlg.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>406</width>
+    <width>447</width>
     <height>238</height>
    </rect>
   </property>
@@ -61,6 +61,20 @@
         </property>
        </widget>
       </item>
+      <item row="0" column="3">
+       <widget class="QToolButton" name="toolButton">
+        <property name="layoutDirection">
+         <enum>Qt::RightToLeft</enum>
+        </property>
+        <property name="text">
+         <string>...</string>
+        </property>
+        <property name="icon">
+         <iconset resource="../resource.qrc">
+          <normaloff>:/icons/addressbook</normaloff>:/icons/addressbook</iconset>
+        </property>
+       </widget>
+      </item>
       <item row="1" column="0">
        <widget class="QLabel" name="label_2">
         <property name="maximumSize">
@@ -84,6 +98,17 @@
         </property>
        </widget>
       </item>
+      <item row="1" column="3">
+       <widget class="QToolButton" name="toolButtonManageAccts">
+        <property name="text">
+         <string>...</string>
+        </property>
+        <property name="icon">
+         <iconset resource="../resource.qrc">
+          <normaloff>:/icons/account</normaloff>:/icons/account</iconset>
+        </property>
+       </widget>
+      </item>
       <item row="2" column="0">
        <widget class="QLabel" name="label_4">
         <property name="maximumSize">
@@ -97,7 +122,7 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="1" colspan="2">
+      <item row="2" column="1" colspan="3">
        <widget class="QLineEdit" name="memoEdit"/>
       </item>
       <item row="3" column="0">
@@ -123,7 +148,7 @@
         </property>
        </widget>
       </item>
-      <item row="3" column="2">
+      <item row="3" column="2" colspan="2">
        <widget class="QComboBox" name="comboBox">
         <item>
          <property name="text">
@@ -162,9 +187,9 @@
     </widget>
    </item>
   </layout>
-  <zorder>groupBox</zorder>
-  <zorder>sendButton</zorder>
  </widget>
- <resources/>
+ <resources>
+  <include location="../resource.qrc"/>
+ </resources>
  <connections/>
 </ui>
