--- a/src/resource.qrc
+++ b/src/resource.qrc
@@ -25,5 +25,9 @@
         <file>icons/refresh.png</file>
         <file>icons/padlock_open.png</file>
         <file>icons/lock.png</file>
+        <file>icons/uparrow.png</file>
+        <file>icons/downarrow.png</file>
+        <file>icons/green_up_arrow.png</file>
+        <file>icons/red_down_arrow.png</file>
     </qresource>
 </RCC>
