Withdraw/deposit cash done.
Signed-off-by: FellowTraveler <F3llowTraveler@gmail.com>

--- a/src/Widgets/accountdetails.ui
+++ b/src/Widgets/accountdetails.ui
@@ -61,7 +61,7 @@
        </property>
        <property name="icon">
         <iconset resource="../resource.qrc">
-         <normaloff>:/icons/purse</normaloff>:/icons/purse</iconset>
+         <normaloff>:/icons/icons/assets.png</normaloff>:/icons/icons/assets.png</iconset>
        </property>
       </widget>
      </item>
@@ -127,6 +127,31 @@
     <widget class="Line" name="line">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QPushButton" name="pushButtonSend">
+       <property name="text">
+        <string>Send Funds</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButtonRequest">
+       <property name="text">
+        <string>Request Funds</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <widget class="QPushButton" name="pushButtonMakeDefault">
+     <property name="text">
+      <string>Make Default Account</string>
      </property>
     </widget>
    </item>
