--- a/src/resource.qrc
+++ b/src/resource.qrc
@@ -29,5 +29,12 @@
         <file>icons/downarrow.png</file>
         <file>icons/green_up_arrow.png</file>
         <file>icons/red_down_arrow.png</file>
+        <file>icons/Basic-Copy-icon.png</file>
+        <file>icons/assets.png</file>
+        <file>icons/identity.png</file>
+        <file>icons/identity_BW.png</file>
+        <file>icons/vault.png</file>
+        <file>icons/safe_box.png</file>
+        <file>icons/safe.png</file>
     </qresource>
 </RCC>
