--- a/src/Widgets/accountdetails.ui
+++ b/src/Widgets/accountdetails.ui
@@ -131,29 +131,29 @@
     </widget>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
+    <layout class="QGridLayout" name="gridLayout_2">
+     <item row="0" column="0">
       <widget class="QPushButton" name="pushButtonSend">
        <property name="text">
         <string>Send Funds</string>
        </property>
       </widget>
      </item>
-     <item>
+     <item row="0" column="1">
       <widget class="QPushButton" name="pushButtonRequest">
        <property name="text">
         <string>Request Funds</string>
        </property>
       </widget>
      </item>
+     <item row="1" column="0" colspan="2">
+      <widget class="QPushButton" name="pushButtonMakeDefault">
+       <property name="text">
+        <string>Make Default Account</string>
+       </property>
+      </widget>
+     </item>
     </layout>
-   </item>
-   <item>
-    <widget class="QPushButton" name="pushButtonMakeDefault">
-     <property name="text">
-      <string>Make Default Account</string>
-     </property>
-    </widget>
    </item>
    <item>
     <spacer name="verticalSpacer">
