--- a/src/Widgets/cashpurse.ui
+++ b/src/Widgets/cashpurse.ui
@@ -109,7 +109,7 @@
       <widget class="QLabel" name="labelCashBalance">
        <property name="minimumSize">
         <size>
-         <width>200</width>
+         <width>0</width>
          <height>0</height>
         </size>
        </property>
@@ -128,6 +128,16 @@
        </property>
        <property name="indent">
         <number>10</number>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButtonExport">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
+       <property name="text">
+        <string>Export</string>
        </property>
       </widget>
      </item>
