Added 'Export Cash' button to cash purse.
Signed-off-by: FellowTraveler <F3llowTraveler@gmail.com>

--- a/src/Widgets/cashpurse.ui
+++ b/src/Widgets/cashpurse.ui
@@ -137,7 +137,7 @@
         <bool>false</bool>
        </property>
        <property name="text">
-        <string>Export</string>
+        <string>Export...</string>
        </property>
       </widget>
      </item>
