--- a/src/Widgets/pagenym_source.ui
+++ b/src/Widgets/pagenym_source.ui
@@ -34,6 +34,16 @@
      </property>
     </widget>
    </item>
+   <item row="2" column="0" colspan="2">
+    <widget class="QLabel" name="labelExtra">
+     <property name="text">
+      <string>Extra Info Label</string>
+     </property>
+     <property name="wordWrap">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <resources/>
