--- a/src/Widgets/pagenym_source.ui
+++ b/src/Widgets/pagenym_source.ui
@@ -24,7 +24,14 @@
    <item row="0" column="1">
     <widget class="QLineEdit" name="lineEditSource"/>
    </item>
-   <item row="1" column="0" colspan="2">
+   <item row="0" column="2">
+    <widget class="QPushButton" name="getAddress">
+     <property name="text">
+      <string>Get Address</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0" colspan="3">
     <widget class="QLabel" name="labelExplanation">
      <property name="text">
       <string>Explanation Label</string>
@@ -34,7 +41,7 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="0" colspan="2">
+   <item row="2" column="0" colspan="3">
     <widget class="QLabel" name="labelExtra">
      <property name="text">
       <string>Extra Info Label</string>
