--- a/src/Widgets/assetdetails.ui
+++ b/src/Widgets/assetdetails.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>MTAssetDetails</class>
- <widget class="QWidget" name="MTAssetDetails">
+ <widget class="MTEditDetails" name="MTAssetDetails">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -83,6 +83,14 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>MTEditDetails</class>
+   <extends>QWidget</extends>
+   <header>editdetails.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
