Changed many pointers to signals/slots.
Signed-off-by: FellowTraveler <F3llowTraveler@gmail.com>

--- a/src/UI/dlgmarkets.ui
+++ b/src/UI/dlgmarkets.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Bid/Ask Markets</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
@@ -87,7 +87,6 @@
       <attribute name="title">
        <string>Markets</string>
       </attribute>
-      <zorder>comboBoxNym</zorder>
      </widget>
      <widget class="QWidget" name="tabOffers">
       <attribute name="title">
