--- a/src/moneychanger/Widgets/detailedit.ui
+++ b/src/moneychanger/Widgets/detailedit.ui
@@ -26,6 +26,9 @@
       <enum>QLayout::SetDefaultConstraint</enum>
      </property>
      <item>
+      <widget class="QComboBox" name="comboBox"/>
+     </item>
+     <item>
       <widget class="QTableWidget" name="tableWidget">
        <property name="sizePolicy">
         <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
