Show NMC state in credentials tab.
Show status of Namecoin registrations of credentials in the credentials
detail tab.

--- a/src/moneychanger/Widgets/credentials.ui
+++ b/src/moneychanger/Widgets/credentials.ui
@@ -26,6 +26,11 @@
        <string>ID</string>
       </property>
      </column>
+     <column>
+      <property name="text">
+       <string>NMC Status</string>
+      </property>
+     </column>
     </widget>
    </item>
    <item>
