--- a/src/moneychanger/Widgets/pageacct_server.ui
+++ b/src/moneychanger/Widgets/pageacct_server.ui
@@ -35,12 +35,16 @@
     <widget class="QPushButton" name="pushButtonManage">
      <property name="maximumSize">
       <size>
-       <width>100</width>
-       <height>16777215</height>
+       <width>21</width>
+       <height>21</height>
       </size>
      </property>
      <property name="text">
-      <string>Manage...</string>
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset resource="../resource.qrc">
+       <normaloff>:/icons/server</normaloff>:/icons/server</iconset>
      </property>
     </widget>
    </item>
@@ -66,6 +70,8 @@
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="../resource.qrc"/>
+ </resources>
  <connections/>
 </ui>
