--- a/src/moneychanger/Widgets/pageoffer_amounts.ui
+++ b/src/moneychanger/Widgets/pageoffer_amounts.ui
@@ -78,7 +78,7 @@
     </layout>
    </item>
    <item>
-    <layout class="QGridLayout" name="gridLayout" columnminimumwidth="1,2,1,1,1">
+    <layout class="QGridLayout" name="gridLayout">
      <item row="0" column="0" colspan="5">
       <widget class="Line" name="line">
        <property name="orientation">
@@ -151,6 +151,16 @@
       <widget class="QLabel" name="labelPer">
        <property name="text">
         <string>per BLAH</string>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="1" colspan="2">
+      <widget class="QComboBox" name="comboBoxExpiration"/>
+     </item>
+     <item row="6" column="0">
+      <widget class="QLabel" name="labelExpiration">
+       <property name="text">
+        <string>Expiration:</string>
        </property>
       </widget>
      </item>
