--- a/src/moneychanger/Widgets/pageoffer_accounts.ui
+++ b/src/moneychanger/Widgets/pageoffer_accounts.ui
@@ -6,20 +6,26 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>544</width>
-    <height>349</height>
+    <width>743</width>
+    <height>508</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="minimumSize">
    <size>
-    <width>0</width>
-    <height>0</height>
+    <width>743</width>
+    <height>508</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>16777215</width>
-    <height>353</height>
+    <width>743</width>
+    <height>508</height>
    </size>
   </property>
   <property name="windowTitle">
