--- a/src/moneychanger/Widgets/pageoffer_assets.ui
+++ b/src/moneychanger/Widgets/pageoffer_assets.ui
@@ -6,14 +6,26 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>498</width>
-    <height>368</height>
+    <width>743</width>
+    <height>508</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="minimumSize">
    <size>
-    <width>498</width>
-    <height>0</height>
+    <width>743</width>
+    <height>508</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>743</width>
+    <height>508</height>
    </size>
   </property>
   <property name="windowTitle">
