fix .ui includes

--- a/src/gui/widgets/accountdetails.ui
+++ b/src/gui/widgets/accountdetails.ui
@@ -174,7 +174,7 @@
   <customwidget>
    <class>MTEditDetails</class>
    <extends>QWidget</extends>
-   <header>editdetails.h</header>
+   <header>gui/widgets/editdetails.hpp</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
