--- a/src/gui/widgets/offerdetails.ui
+++ b/src/gui/widgets/offerdetails.ui
@@ -298,7 +298,7 @@
   <customwidget>
    <class>MTEditDetails</class>
    <extends>QWidget</extends>
-   <header>editdetails.h</header>
+   <header>gui/widgets/editdetails.hpp</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
