Added P2P Transport dialog, integrated Bitmessage
Signed-off-by: FellowTraveler <F3llowTraveler@gmail.com>

--- a/src/gui/widgets/contactdetails.ui
+++ b/src/gui/widgets/contactdetails.ui
@@ -75,6 +75,13 @@
     </layout>
    </item>
    <item>
+    <widget class="QPushButton" name="pushButtonMsg">
+     <property name="text">
+      <string>Message this Contact</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
