--- a/src/gui/resource.qrc
+++ b/src/gui/resource.qrc
@@ -37,5 +37,6 @@
         <file>icons/safe_box.png</file>
         <file>icons/safe.png</file>
         <file>icons/buildings.png</file>
+        <file>icons/p2p.png</file>
     </qresource>
 </RCC>
