--- a/src/gui/widgets/btcpoolmanager.ui
+++ b/src/gui/widgets/btcpoolmanager.ui
@@ -6,14 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>458</width>
+    <width>546</width>
     <height>441</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QListWidget" name="listWidget">
+  <widget class="QListWidget" name="listPools">
    <property name="geometry">
     <rect>
      <x>40</x>
@@ -23,7 +23,7 @@
     </rect>
    </property>
   </widget>
-  <widget class="QLabel" name="label">
+  <widget class="QLabel" name="labelPools">
    <property name="geometry">
     <rect>
      <x>50</x>
@@ -36,7 +36,7 @@
     <string>Pools:</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QPushButton" name="buttonAddSimPool">
    <property name="geometry">
     <rect>
      <x>40</x>
@@ -49,7 +49,7 @@
     <string>Add locally simulated pool</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_2">
+  <widget class="QPushButton" name="buttonDelPool">
    <property name="geometry">
     <rect>
      <x>40</x>
@@ -60,6 +60,55 @@
    </property>
    <property name="text">
     <string>Remove Pool</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="buttonRefreshPools">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>240</y>
+     <width>93</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Refresh</string>
+   </property>
+  </widget>
+  <widget class="QListWidget" name="listServers">
+   <property name="geometry">
+    <rect>
+     <x>280</x>
+     <y>90</y>
+     <width>221</width>
+     <height>141</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="labelServers">
+   <property name="geometry">
+    <rect>
+     <x>280</x>
+     <y>60</y>
+     <width>101</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Servers in Pool:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="labelPoolname">
+   <property name="geometry">
+    <rect>
+     <x>390</x>
+     <y>60</y>
+     <width>151</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
    </property>
   </widget>
  </widget>
